compiler/tests/success/slh/x86-64/init_msf.jazz
export fn foo () -> reg u64 {
   reg u64 msf;
   msf = #init_msf();
   return msf;
}

export fn foo2() {
   _ = #init_msf();
}
