compiler/tests/fail/lower_spill/needs_to_be_spilled_overwritten.jazz
export fn main () -> reg u32 {
  reg u32 res;
  res = 0;
  #spill(res);
  res = 2;
  #unspill(res);
  return res;
}
